# llm-semantic-search

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py
app/schema/: models.py
app/services/: chunker.py  embedder.py  vector_store.py
app/utils/: index_factory.py
data/: faiss.index  faiss.index.texts.json
